# meganova-python

./: ImplementationGuideline.md  README.md  probe_models.py  pyproject.toml
examples/: agent_customer_support.py  agent_sandboxed.py  agent_team.py  agent_with_tools.py  async_chat.py  audio_transcription.py  basic_chat.py  embeddings.py  image_generation.py  list_models.py  serverless_models.py  streaming_chat.py  studio_agent_chat.py  studio_agent_streaming.py  studio_agent_tools.py  test_context_length.py  usage_billing.py  video_generation.py
meganova/: __init__.py  async_client.py  async_transport.py  client.py  config.py  errors.py  transport.py  version.py
meganova/agents/: __init__.py  agent.py  hooks.py  memory.py  subagents.py
meganova/cloud/: __init__.py  agent.py  models.py  transport.py
meganova/models/: audio.py  billing.py  chat.py  common.py  embeddings.py  images.py  models_.py  serverless.py  usage.py  videos.py
meganova/resources/: async_resources.py  audio.py  billing.py  chat.py  embeddings.py  images.py  models_.py  serverless.py  usage.py  videos.py
meganova/studio/: __init__.py  agent.py  models.py  transport.py
tests/: conftest.py  test_async_client.py  test_async_transport.py  test_client.py  test_errors.py  test_package_init.py  test_transport.py
tests/agents/: test_agent.py  test_hooks.py  test_memory.py  test_sandbox.py  test_subagents.py  test_tools_base.py  test_tools_file_ops.py  test_tools_knowledge.py  test_tools_shell.py  test_tools_web.py
tests/cloud/: test_cloud_agent.py  test_cloud_models.py  test_cloud_transport.py  test_conversation.py
tests/models/: test_audio_models.py  test_billing_models.py  test_chat_models.py  test_embedding_models.py  test_image_models.py  test_model_models.py  test_serverless_models.py  test_usage_models.py  (+1 more)
(+20 files in other folders)
