[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meganova"
version = "0.1.0"
description = "Official Python SDK for Meganova AI"
authors = [
    {name = "Meganova AI", email = "support@meganova.ai"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
"Homepage" = "https://meganova.ai"
"Repository" = "https://github.com/meganova/meganova-python"


